--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -13,3 +13,4 @@
 .fi-icon-large-bars { background-image: url("../svg/icon-large-bars.svg"); }
 .fi-icon-large-bar-chart { background-image: url("../svg/icon-large-bar-chart.svg"); }
 
+/*span.highlight {background: #9BCC56; color: #fff; padding:0 3px;}*/
